Test solicitudes de eliminacion terminado (req 5, 6)